# podsy

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/: index.html  style.css
src/podsy/: __init__.py  __main__.py  app.py  artwork.py  cli.py  device.py  musicbrainz.py  playlists.py  sync.py  transcoder.py
src/podsy/db/: __init__.py  artworkdb.py  atoms.py  models.py  parser.py
src/podsy/ui/: __init__.py  screens.py  styles.tcss
tests/: __init__.py  test_atoms.py  test_device.py  test_models.py  test_parser.py  test_playlists.py  test_sync.py
