[project]
name = "podsy"
version = "0.1.0"
description = "TUI for managing iPod 5.5g on Linux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=3.0",
    "construct>=2.10",
    "mutagen>=1.47",
]

[project.scripts]
podsy = "podsy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podsy"]

[dependency-groups]
dev = [
    "textual-dev>=1.7",
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
